added javadoc to StructuredConcurrencyTest to detail how to configure and run it